fixed alignement issue

--- a/CSS/business-card.css
+++ b/CSS/business-card.css
@@ -46,10 +46,13 @@
     position: relative;
     width: 100%;
     height: 100%;
-    text-align: center;
+    text-align: left;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+   
+
+     
   
    
   }
@@ -67,6 +70,12 @@
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
     border-radius: 25px;
+    padding-left: 1rem;
+   
+   
+
+    
+    
   
    
   }
